--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "mongoose": "^6.0.6",
+    "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   }
 }
