--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "knex": "^0.95.11",
     "mongoose": "^6.0.6",
     "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5"
   }
 }
